# HA-sleep

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MEDICAL_DISCLAIMER.md  PRIVACY.md  README.md  SECURITY.md  TASK1_COMPLETION.md  _addon_options.json  _overrides.json  _set_options.sh  _test_ort.sh  addon-info.json  info.json  pyproject.toml  repository.yaml  requirements-runtime.txt  requirements-train.txt  requirements.txt  setup.py  setup_env.bat  setup_env.sh  sync-to-ha.ps1
.github/: FUNDING.yml  baseline_image_size.txt
.github/workflows/: addon-build.yml  release.yml  test.yml
.kiro/specs/algorithmic-moat-v3.0.0/: design.md  requirements.md  tasks.md
.kiro/specs/cnn-bilstm-sleep-algorithm/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/commercial-readiness-v2.1.0/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/post-v2.0.2-full-pipeline-audit/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/v3-core-algorithm-moat/: .config.kiro  requirements.md
.kiro/steering/: language.md  product.md  structure.md  tech.md
addons/sleep_classifier/: .dockerignore  DOCS.md  Dockerfile  build.yaml  config.yaml  prepare.bat  prepare.sh  run.sh
addons/sleep_classifier/rootfs/: requirements-train.txt
addons/sleep_classifier/rootfs/config/: config.json  config_loader.py
addons/sleep_classifier/rootfs/models/: training_history.json
addons/sleep_classifier/rootfs/scripts/: run_ha_service.py  run_ha_smart_service.py
addons/sleep_classifier/rootfs/src/: __init__.py  anomaly_handler.py  bilstm_analyzer.py  data_normalizer.py  data_structures.py  device_discovery.py  disaster_monitor.py  edf_parser.py  movement_filter.py  performance_metrics.py  preference_learner.py  sleep_quality_score.py  sleep_state_publisher.py  smart_wake.py  (+3 more)
data/: .gitkeep
docs/: BACKLOG.md  CASE_STUDIES.md  EDF_PARSER_IMPLEMENTATION.md  HACS_MIGRATION.md  HARDWARE.md  HA_DEPLOYMENT.md  HA_SMART_DEPLOYMENT.md  MANUAL_DEPLOYMENT.md  POPULATION_PRIOR.md  PROJECT_COMPLETION_REPORT.md  ROADMAP.md  algorithm_evaluation.md  ha_automations.yaml
examples/: lovelace_dashboard.yaml
ltm/: config.json
ltm/runtime/: active-context.json  current-session.json  health.json  last-recall.md
scripts/: _auto_update.py  check_translations.py  diagnostic_export.py  eval_bayesian_regret.py  eval_causal_synthetic.py  eval_stage_predictor_hitrate.py  evaluate.py  generate_branding_assets.py  ha_supervisor_ws.py  run_ha_smart_service.py  sanitize_user_data.py  sync_version.py  train.py
sleep_classifier/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  bootstrap_placeholders.py  build.yaml  build.yaml.deprecated  config.yaml  lovelace_template.py  prepare.bat  prepare.sh  render_effective_config.py  run.sh  web_ui.py
sleep_classifier/rootfs/: requirements-runtime.txt  requirements.txt
sleep_classifier/rootfs/models/: .gitkeep  evaluation_report.json
sleep_classifier/rootfs/scripts/: __init__.py  _auto_update.py  check_artifacts.py  check_branding.py  check_funding.py  check_medical_links.py  download_data.py  eval_population_prior_rmse.py  run_demo.py  run_ha_service.py  run_ha_smart_service.py  simulate_full_night.py  train_population_prior.py  train_stage_predictor.py
sleep_classifier/rootfs/src/: _io_utils.py  _time_utils.py  apnea_wiring.py  cnn_extractor.py  data_normalizer.py  data_structures.py  dataset_loader.py  device_capabilities.py  device_discovery.py  environment_controller.py  external_stage_subscriber.py  feedback_input.py  ha_api_client.py  learning_panel_publisher.py  model_persistence.py  movement_filter.py  mqtt_publisher.py  onboarding_scanner.py  preference_learner.py  sleep_classifier.py  sleep_debt.py  sleep_state_publisher.py  smart_environment_controller.py  stage_predictor.py  time_synchronizer.py  training_pipeline.py  user_profile.py  wavelet_denoiser.py  whitenoise_matcher.py
sleep_classifier/rootfs/training_config/: config.json  config_loader.py
sleep_classifier/translations/: en.yaml  zh-cn.yaml
src/: __init__.py  _overrides_schema.py  apnea_detector.py  apnea_wiring.py  bayesian_optimizer.py  causal_attribution.py  data_structures.py  device_capabilities.py  disaster_monitor.py  external_stage_subscriber.py  ha_api_client.py  ha_integration.py  inference_pipeline.py  live_state_cache.py  mqtt_subscriber.py  population_prior.py  preference_learner.py  sleep_debt.py  sleep_state_publisher.py  smart_environment_controller.py  smart_wake.py  telemetry_reporter.py  upgrade_notifier.py  user_profile.py  wavelet_denoiser.py
tests/: __init__.py  test_anomaly_handler.py  test_apnea_detector.py  test_apnea_wiring.py  test_apparmor_profile.py  test_bayesian_optimizer.py  test_bayesian_optimizer_extra.py  test_bilstm_analyzer.py  test_bootstrap_placeholders.py  test_build_yaml_shape.py  test_case_studies_doc.py  test_causal_attribution.py  test_causal_attribution_extra.py  test_causal_attribution_synthetic.py  test_check_branding.py  test_check_medical_links.py  test_check_translations.py  test_cnn_extractor.py  test_config_loader.py  test_config_yaml_startup.py  test_config_yaml_url_and_labels.py  test_dashboard_import.py  test_data_normalizer.py  test_data_structures.py  test_dataset_loader.py  test_dataset_loader_integration.py  test_device_discovery.py  test_device_discovery_slots.py  test_disaster_monitor.py  test_dockerfile_build_from.py  test_dockerfile_labels.py  test_e2e_full_night.py  test_edf_parser.py  test_edf_parser_integration.py  test_environment_controller.py  test_event_storm.py  test_external_stage_subscriber.py  test_feedback_input.py  test_funding_yml.py  test_ha_api_client.py  (+81 more)
tests/fixtures/v2.0.3/: user_preferences.json  web_ui_overrides.json
training_config/: config.json
